--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,180 +1,232 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorFindo"
-    tools:context="mx.martinezfernando.reyesjose.cecyt9.edu.ipn.memorama.MainActivity">
+    tools:context=".MainActivity"
+    android:background="@color/colorFindo">
 
-    <TableRow
-        android:id="@+id/row1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_weight="0.8"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
+    <android.support.v7.widget.GridLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        app:columnCount="4"
+        app:rowCount="5"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
 
-        <ImageView
+
+        <ImageButton
             android:id="@+id/b1"
-            android:layout_width="90dp"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="2dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_marginRight="7dp"
-            app:srcCompat="@color/colorAccent" />
+            android:layout_marginBottom="20dp"
+            android:background="@color/colorAccent"
+            android:onClick="voltear"
+            app:layout_column="0"
+            app:layout_row="0"
+            tools:layout_editor_absoluteX="29dp"
+            tools:layout_editor_absoluteY="39dp" />
 
-        <ImageView
+        <ImageButton
             android:id="@+id/b2"
-            android:layout_width="90dp"
-            android:layout_height="match_parent"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_marginRight="7dp"
-            app:srcCompat="@color/colorAccent" />
+            android:layout_weight="1"
+            android:background="@color/colorAccent"
+            android:onClick="voltear"
+            app:layout_column="1"
+            app:layout_row="0" />
 
-        <ImageView
+        <ImageButton
             android:id="@+id/b3"
-            android:layout_width="90dp"
-            android:layout_height="match_parent"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_marginRight="7dp"
-            app:srcCompat="@color/colorAccent" />
+            android:layout_weight="1"
+            android:background="@color/colorAccent"
+            android:onClick="voltear"
+            app:layout_column="2"
+            app:layout_row="0" />
 
-        <ImageView
+        <ImageButton
             android:id="@+id/b4"
-            android:layout_width="90dp"
-            android:layout_height="match_parent"
-            app:srcCompat="@color/colorAccent" />
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_weight="1"
+            android:background="@color/colorAccent"
+            android:onClick="voltear"
+            app:layout_column="3"
+            app:layout_row="0" />
 
-    </TableRow>
 
-    <TableRow
-        android:id="@+id/row2"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="10dp"
-        android:layout_weight="0.8">
-
-        <ImageView
+        <ImageButton
             android:id="@+id/b5"
-            android:layout_width="90dp"
-            android:layout_height="match_parent"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_marginRight="7dp"
-            app:srcCompat="@color/colorAccent" />
+            android:layout_marginBottom="20dp"
+            android:layout_weight="1"
+            android:background="@color/colorAccent"
+            android:onClick="voltear"
+            app:layout_column="0"
+            app:layout_row="1" />
 
-        <ImageView
+        <ImageButton
             android:id="@+id/b6"
-            android:layout_width="90dp"
-            android:layout_height="match_parent"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_marginRight="7dp"
-            app:srcCompat="@color/colorAccent" />
+            android:layout_weight="1"
+            android:background="@color/colorAccent"
+            android:onClick="voltear"
+            app:layout_column="1"
+            app:layout_row="1" />
 
-        <ImageView
+        <ImageButton
             android:id="@+id/b7"
-            android:layout_width="90dp"
-            android:layout_height="match_parent"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_marginRight="7dp"
-            app:srcCompat="@color/colorAccent" />
+            android:layout_weight="1"
+            android:background="@color/colorAccent"
+            android:onClick="voltear"
+            app:layout_column="2"
+            app:layout_row="1" />
 
-        <ImageView
+        <ImageButton
             android:id="@+id/b8"
-            android:layout_width="90dp"
-            android:layout_height="match_parent"
-            app:srcCompat="@color/colorAccent" />
-    </TableRow>
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_weight="1"
+            android:background="@color/colorAccent"
+            android:onClick="voltear"
+            app:layout_column="3"
+            app:layout_row="1" />
 
-    <TableRow
-        android:id="@+id/row3"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="10dp"
 
-        android:layout_weight="0.8">
-
-        <ImageView
+        <ImageButton
             android:id="@+id/b9"
-            android:layout_width="90dp"
-            android:layout_height="match_parent"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_marginRight="7dp"
-            app:srcCompat="@color/colorAccent" />
+            android:layout_marginBottom="20dp"
+            android:layout_weight="1"
+            android:background="@color/colorAccent"
+            android:onClick="voltear"
+            app:layout_column="0"
+            app:layout_row="2" />
 
-        <ImageView
+        <ImageButton
             android:id="@+id/b10"
-            android:layout_width="90dp"
-            android:layout_height="match_parent"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_marginRight="7dp"
-            app:srcCompat="@color/colorAccent" />
+            android:layout_weight="1"
+            android:background="@color/colorAccent"
+            android:onClick="voltear"
+            app:layout_column="1"
+            app:layout_row="2" />
 
-        <ImageView
+        <ImageButton
             android:id="@+id/b11"
-            android:layout_width="90dp"
-            android:layout_height="match_parent"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_marginRight="7dp"
-            app:srcCompat="@color/colorAccent" />
+            android:layout_weight="1"
+            android:background="@color/colorAccent"
+            android:onClick="voltear"
+            app:layout_column="2"
+            app:layout_row="2" />
 
-        <ImageView
+        <ImageButton
             android:id="@+id/b12"
-            android:layout_width="90dp"
-            android:layout_height="match_parent"
-            app:srcCompat="@color/colorAccent" />
-    </TableRow>
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_weight="1"
+            android:background="@color/colorAccent"
+            android:onClick="voltear"
+            app:layout_column="3"
+            app:layout_row="2" />
 
-    <TableRow
-        android:id="@+id/row4"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="0.8" >
 
-        <ImageView
+        <ImageButton
             android:id="@+id/b13"
-            android:layout_width="90dp"
-            android:layout_height="match_parent"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_marginRight="7dp"
-            app:srcCompat="@color/colorAccent" />
+            android:layout_marginBottom="50dp"
+            android:layout_weight="1"
+            android:background="@color/colorAccent"
+            android:onClick="voltear"
+            app:layout_column="0"
+            app:layout_row="3" />
 
-        <ImageView
+        <ImageButton
             android:id="@+id/b14"
-            android:layout_width="90dp"
-            android:layout_height="match_parent"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_marginRight="7dp"
-            app:srcCompat="@color/colorAccent" />
+            android:layout_weight="1"
+            android:background="@color/colorAccent"
+            android:onClick="voltear"
+            app:layout_column="1"
+            app:layout_row="3" />
 
-        <ImageView
+        <ImageButton
             android:id="@+id/b15"
-            android:layout_width="90dp"
-            android:layout_height="match_parent"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_marginRight="7dp"
-            app:srcCompat="@color/colorAccent" />
+            android:layout_weight="1"
+            android:background="@color/colorAccent"
+            android:onClick="voltear"
+            app:layout_column="2"
+            app:layout_row="3" />
 
-        <ImageView
+        <ImageButton
             android:id="@+id/b16"
-            android:layout_width="90dp"
-            android:layout_height="match_parent"
-            app:srcCompat="@color/colorAccent" />
-    </TableRow>
-
-    <TableRow
-        android:id="@+id/row5"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="0.2"
-        android:gravity="center_vertical|end">
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_weight="1"
+            android:background="@color/colorAccent"
+            android:onClick="voltear"
+            app:layout_column="3"
+            app:layout_row="3" />
 
         <TextView
             android:id="@+id/timer"
-            android:layout_width="wrap_content"
+            android:layout_width="70dp"
             android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
+            android:layout_weight="5"
             android:gravity="center"
             android:text="00:00"
-            android:textColor="@android:color/background_dark" />
+            app:layout_row="4"
+            app:layout_column="0"
+            android:textSize="24sp" />
 
         <Button
             android:id="@+id/back"
-            android:layout_width="wrap_content"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
+            android:layout_weight="0.5"
             android:backgroundTint="@color/colorBotin"
-            android:text="Regresar"
-            android:textColor="@android:color/background_light" />
+            android:onClick="regreso"
+            android:text="Atras"
+            android:textColor="@android:color/background_light"
+            app:layout_column="3"
+            app:layout_row="4" />
 
-    </TableRow>
-</TableLayout>
+    </android.support.v7.widget.GridLayout>
+
+</android.support.constraint.ConstraintLayout>
